# legacy-modernization-platform

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  implementation_plan.md  railway.toml  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  Procfile  alembic.ini  pyproject.toml  railway.json  railway.toml  requirements-dev.txt  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  0001_initial_schema.py  0002_widen_dependency_varchar.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/routes/: analysis.py  auth.py  jobs.py  projects.py  recommendations.py  reports.py  webhooks.py
backend/app/core/: __init__.py  config.py  database.py  rate_limit.py  redis.py  security.py
backend/app/models/: __init__.py  analysis.py  job.py  project.py  recommendation.py  score.py  user.py
backend/app/schemas/: __init__.py  analysis.py  common.py  job.py  project.py  recommendation.py  user.py
backend/app/services/: __init__.py  ai_pipeline.py  ast_parser.py  debt_detector.py  dependency_analyzer.py  ingestion.py  scoring.py
backend/app/workers/: __init__.py  analysis_worker.py  worker_config.py
backend/scripts/: init-db.sql
backend/tests/: conftest.py
backend/tests/integration/: test_api_health.py  test_api_projects.py
backend/tests/unit/: test_ast_parser.py  test_debt_detector.py  test_scoring.py
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  HYKR_SUBMISSION.md  ROADMAP.md
frontend/: .dockerignore  .env.example  Dockerfile  jest.config.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  vercel.json
frontend/e2e/: home.spec.ts
frontend/src/: middleware.ts
frontend/src/__tests__/: utils.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/analytics/: page.tsx
frontend/src/app/dashboard/insights/: page.tsx
frontend/src/app/dashboard/projects/: page.tsx
frontend/src/app/dashboard/projects/[id]/: page.tsx
frontend/src/app/dashboard/projects/new/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/login/: actions.ts  page.tsx
frontend/src/app/report/[id]/: page.tsx
frontend/src/components/analysis/: create-pr-button.tsx  score-gauge.tsx  sub-score-radar.tsx
frontend/src/components/landing/: score-cards.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  pagination.tsx  progress.tsx  skeleton.tsx  tabs.tsx
frontend/src/hooks/: use-job-status.ts  use-polling.ts  use-sse-job-status.ts
frontend/src/lib/: api-client.ts  auth.ts  constants.ts  download-report.ts  utils.ts
frontend/src/types/: index.ts
