# =============================================================================
# CodeLens AI — Backend Project Configuration
# =============================================================================
# Python project metadata following PEP 621.
# =============================================================================

[project]
name = "codelens-ai-backend"
version = "0.1.0"
description = "CodeLens AI — AI-Powered Legacy Modernization Platform (FastAPI Backend)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "CodeLens AI Team" },
]
keywords = ["legacy", "modernization", "code-analysis", "ai", "fastapi"]

dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Redis / queue
    "redis>=5.0.0",
    "arq>=0.26.0",
    # HTTP client
    "httpx>=0.27.0",
    # AI providers
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
    # AST parsing
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    "tree-sitter-php>=0.23.0",
    "tree-sitter-kotlin>=0.23.0",
    "tree-sitter-swift>=0.23.0",
    "tree-sitter-dart>=0.23.0",
    "tree-sitter-scala>=0.23.0",
    # Security
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    # Git
    "GitPython>=3.1.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# ---------------------------------------------------------------------------
# Ruff — Linter & Formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = ["E501"]  # line-too-long is handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# Mypy — Static Type Checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["arq.*", "tree_sitter.*", "tree_sitter_python.*", "tree_sitter_javascript.*", "tree_sitter_typescript.*", "tree_sitter_java.*", "passlib.*", "jose.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
